Feature/add creation and updating timestamps (#47)
* Add created_at and updated_at logic

* Fix npe at updateComponentProvisioningStatus method

* Fix current tests && add new ones

* Fix sonar

* Refactor multiple parameter calls on status update

* Improve readability of two methods

---------

Co-authored-by: Iván Risueño <ivan.risueno_martin.ext@boehringer-ingelheim.com>