@@ -19,23 +19,19 @@ import org.opendevstack.component_catalog.server.services.bitbucket.BitbucketPat
 import org.opendevstack.component_catalog.server.services.exceptions.ComponentAlreadyExistsException;
 import org.opendevstack.component_catalog.server.services.exceptions.ElementNotFoundException;
 import org.opendevstack.component_catalog.server.services.exceptions.InvalidEntityException;
-import org.opendevstack.component_catalog.server.services.provisioner.Parameter;
-import org.opendevstack.component_catalog.server.services.provisioner.ProjectComponent;
-import org.opendevstack.component_catalog.server.services.provisioner.ProjectComponents;
-import org.opendevstack.component_catalog.server.services.provisioner.Status;
+import org.opendevstack.component_catalog.server.services.provisioner.*;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.web.client.HttpClientErrorException;
 
 import java.util.Base64;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Optional;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -59,6 +55,27 @@ class ProvisionerActionsServiceTest {
     private ProvisionerActionsConfiguration provisionerActionsConfiguration;
 
     private ProvisionerActionsService provisionerActionsService;
+
+    // helper
+    private ProjectComponentRequest request(String componentId,
+                                            String catalogItemId,
+                                            Status status,
+                                            String url,
+                                            String workflowJobId,
+                                            String createdAt,
+                                            String updatedAt,
+                                            List<Parameter> params) {
+        return ProjectComponentRequest.builder()
+                .componentId(componentId)
+                .catalogItemId(catalogItemId)
+                .status(status)
+                .componentUrl(url)
+                .workflowJobId(workflowJobId)
+                .createdAt(createdAt)
+                .updatedAt(updatedAt)
+                .parameters(params)
+                .build();
+    }
 
     @BeforeEach
     void setUp() {
@@ -94,6 +111,8 @@ class ProvisionerActionsServiceTest {
         var componentId = "componentId";
         var catalogItemId = "catalogItemId";
         var componentUrl = "catalogUrl";
+        var createdAt = "created";
+        var updatedAt = "updated";
 
         var pathAt = BitbucketPathAtMother.of();
         var sourceCommitId = "sourceCommitId";
@@ -101,34 +120,23 @@ class ProvisionerActionsServiceTest {
         var projectComponents = new ProjectComponents();
         var updatedProjectComponents = ProjectComponentsMother.of();
 
-        var parameterParam = Pair.of("parameterName", List.of("parameterValue"));
-
-        var parameter = Parameter.builder().name(parameterParam.getLeft()).values(parameterParam.getValue()).build();
-        var parameters = List.of(parameter);
+        var parameters = List.of(Parameter.builder().name("parameterName").values(List.of("parameterValue")).build());
 
         prepareMocksForGetBitbucketPathAt(pathAt);
         when(bitbucketService.getLastCommit(pathAt)).thenReturn(Optional.of(sourceCommitId));
 
         prepareMocksForGetNonExistingProjectComponents(pathAt, projectComponents);
         when(projectComponentsService.addNewComponent(
-                projectComponents,
-                componentId,
-                catalogItemId,
-                status,
-                componentUrl,
-                parameters
+                eq(projectComponents),
+                any(ProjectComponentRequest.class)
         )).thenReturn(updatedProjectComponents);
 
-        var serializedUpdatedProjectComponents = prepareMocksForSave(updatedProjectComponents);
+        var serializedUpdatedProjectComponents = prepareMocksForSave();
 
         // when
         provisionerActionsService.updateComponentProvisioningStatus(
                 projectKey,
-                status,
-                componentId,
-                catalogItemId,
-                componentUrl,
-                List.of(parameterParam)
+                request(componentId, catalogItemId, status, componentUrl, null, createdAt, updatedAt, parameters)
         );
 
         // then
@@ -149,6 +157,8 @@ class ProvisionerActionsServiceTest {
         var componentId = "componentId";
         var catalogItemId = "catalogItemId";
         var componentUrl = "catalogUrl";
+        var createdAt = "created";
+        var updatedAt = "updated";
 
         var pathAt = BitbucketPathAtMother.of();
         var sourceCommitId = "sourceCommitId";
@@ -161,24 +171,16 @@ class ProvisionerActionsServiceTest {
 
         prepareMocksForGetExistingProjectComponents(pathAt, projectComponents);
         when(projectComponentsService.updateExistingComponent(
-                projectComponents,
-                componentId,
-                catalogItemId,
-                status,
-                componentUrl,
-                Collections.emptyList()
+                eq(projectComponents),
+                any(ProjectComponentRequest.class)
         )).thenReturn(updatedProjectComponents);
 
-        var serializedUpdatedProjectComponents = prepareMocksForSave(updatedProjectComponents);
+        var serializedUpdatedProjectComponents = prepareMocksForSave();
 
         // when
         provisionerActionsService.updateComponentProvisioningStatus(
                 projectKey,
-                status,
-                componentId,
-                catalogItemId,
-                componentUrl,
-                Collections.emptyList()
+                request(componentId, catalogItemId, status, componentUrl, null, createdAt, updatedAt, List.of())
         );
 
         // then
@@ -276,7 +278,7 @@ class ProvisionerActionsServiceTest {
         when(projectComponentsService.deleteComponent(projectComponents, componentId)).thenReturn(projectComponentsWithoutComponentId);
 
         prepareMocksForGetExistingProjectComponents(pathAt, projectComponents);
-        var serializedProjectComponentsWithoutComponentId = prepareMocksForSave(projectComponentsWithoutComponentId);
+        var serializedProjectComponentsWithoutComponentId = prepareMocksForSave();
 
         // when
         provisionerActionsService.deleteComponentProvisioningStatus(projectKey, componentId);
@@ -328,7 +330,7 @@ class ProvisionerActionsServiceTest {
                 ",\"exceptionName\":\"com.atlassian.bitbucket.content.FileContentUnmodifiedException\"}]}\"");
 
         doThrow(httpClientErrorException).when(bitbucketService).pushFile(eq(pathAt), eq(sourceCommitId), anyString());
-        prepareMocksForSave(updatedProjectComponents);
+        prepareMocksForSave();
 
         // when
         provisionerActionsService.saveProjectComponents(pathAt, sourceCommitId, updatedProjectComponents);
@@ -346,7 +348,7 @@ class ProvisionerActionsServiceTest {
         var httpClientErrorException = new HttpClientErrorException(HttpStatus.CONFLICT, "Client Error");
 
         doThrow(httpClientErrorException).when(bitbucketService).pushFile(eq(pathAt), eq(sourceCommitId), anyString());
-        prepareMocksForSave(updatedProjectComponents);
+        prepareMocksForSave();
 
         // when
         var exception = assertThrows(HttpClientErrorException.class, () ->
@@ -367,8 +369,10 @@ class ProvisionerActionsServiceTest {
         var componentId = "componentId";
         var catalogItemId = "catalogItemId";
         var componentUrl = "componentUrl";
-        var parameterPair = Pair.of("paramName", List.of("paramValue"));
+        var parameterList = List.of(Parameter.builder().name("paramName").values(List.of("paramValue")).build());
         var workflowJobId = "workflowJobId";
+        var createdAt = "created";
+        var updatedAt = "updated";
 
         var pathAt = BitbucketPathAtMother.of();
         var sourceCommitId = "sourceCommitId";
@@ -387,26 +391,16 @@ class ProvisionerActionsServiceTest {
 
         // partial update call
         when(projectComponentsService.updatePartiallyExistingComponent(
-                projectComponents,
-                componentId,
-                catalogItemId,
-                status,
-                componentUrl,
-                workflowJobId,
-                List.of(Parameter.builder().name("paramName").values(List.of("paramValue")).build())
+                eq(projectComponents),
+                any(ProjectComponentRequest.class)
         )).thenReturn(updatedProjectComponents);
 
-        var serializedUpdatedProjectComponents = prepareMocksForSave(updatedProjectComponents);
+        var serializedUpdatedProjectComponents = prepareMocksForSave();
 
         // when
         provisionerActionsService.updatePartiallyComponentProvisioningStatus(
                 projectKey,
-                status,
-                componentId,
-                catalogItemId,
-                componentUrl,
-                workflowJobId,
-                List.of(parameterPair)
+                request(componentId, catalogItemId, status, componentUrl, workflowJobId, createdAt, updatedAt, parameterList)
         );
 
         // then
@@ -427,6 +421,8 @@ class ProvisionerActionsServiceTest {
         var catalogItemId = "catalogItemId";
         var componentUrl = "componentUrl";
         var workflowJobId = "workflowJobId";
+        var createdAt = "created";
+        var updatedAt = "updated";
 
         var pathAt = BitbucketPathAtMother.of();
 
@@ -440,12 +436,7 @@ class ProvisionerActionsServiceTest {
         var exception = assertThrows(ElementNotFoundException.class, () ->
                 provisionerActionsService.updatePartiallyComponentProvisioningStatus(
                         projectKey,
-                        status,
-                        componentId,
-                        catalogItemId,
-                        componentUrl,
-                        workflowJobId,
-                        List.of()
+                        request(componentId, catalogItemId, status, componentUrl, workflowJobId, createdAt, updatedAt, List.of())
                 )
         );
 
@@ -465,6 +456,8 @@ class ProvisionerActionsServiceTest {
         var catalogItemId = "catalogItemId";
         var componentUrl = "url";
         var workflowJobId = "workflowJobId";
+        var createdAt = "created";
+        var updatedAt = "updated";
 
         var pathAt = BitbucketPathAtMother.of();
 
@@ -481,36 +474,146 @@ class ProvisionerActionsServiceTest {
 
         when(projectComponentsService.updatePartiallyExistingComponent(
                 eq(projectComponents),
-                eq(componentId),
-                eq(catalogItemId),
-                eq(status),
-                eq(componentUrl),
-                eq(workflowJobId),
-                any()
+                any(ProjectComponentRequest.class)
         )).thenReturn(updatedProjectComponents);
 
-        var serialized = prepareMocksForSave(updatedProjectComponents);
+        var serialized = prepareMocksForSave();
 
         // when
         provisionerActionsService.updatePartiallyComponentProvisioningStatus(
                 projectKey,
-                status,
-                componentId,
-                catalogItemId,
-                componentUrl,
-                workflowJobId,
-                List.of()
+                request(componentId, catalogItemId, status, componentUrl, workflowJobId, createdAt, updatedAt, List.of())
         );
 
         // then
         verify(bitbucketService).pushFile(pathAt, null, serialized);
     }
+    @Test
+    void givenExistingComponent_whenUpdate_thenCreatedAtIsPreserved() throws Exception {
+        // given
+        var componentId = "componentId";
 
-    private String prepareMocksForSave(ProjectComponents updatedProjectComponents) throws JsonProcessingException {
+        var existing = new ProjectComponent();
+        existing.setCreatedAt("originalCreatedAt");
+
+        var components = new HashMap<String, ProjectComponent>();
+        components.put(componentId, existing);
+
+        var projectComponents = new ProjectComponents();
+        projectComponents.setComponents(components);
+
+        var pathAt = BitbucketPathAtMother.of();
+
+        prepareMocksForGetBitbucketPathAt(pathAt);
+        when(bitbucketService.getLastCommit(pathAt)).thenReturn(Optional.of("commit"));
+        prepareMocksForGetExistingProjectComponents(pathAt, projectComponents);
+
+        when(projectComponentsService.updateExistingComponent(
+                any(), any(ProjectComponentRequest.class)
+        )).thenReturn(ProjectComponentsMother.of());
+
+        prepareMocksForSave();
+
+        // when
+        provisionerActionsService.updateComponentProvisioningStatus(
+                "projectKey",
+                request(componentId, "catalogItemId", Status.CREATED, "url", null, "created", "updated", List.of())
+        );
+
+        verify(projectComponentsService).updateExistingComponent(
+                eq(projectComponents),
+                argThat(req -> "originalCreatedAt".equals(req.getCreatedAt()))
+        );
+    }
+
+    @Test
+    void givenExistingComponent_whenUpdate_thenUpdatedAtIsGenerated() throws Exception {
+        // given
+        var componentId = "componentId";
+
+        var existing = new ProjectComponent();
+        existing.setCreatedAt("originalCreatedAt");
+
+        var components = new HashMap<String, ProjectComponent>();
+        components.put(componentId, existing);
+
+        var projectComponents = new ProjectComponents();
+        projectComponents.setComponents(components);
+
+        var pathAt = BitbucketPathAtMother.of();
+
+        prepareMocksForGetBitbucketPathAt(pathAt);
+        when(bitbucketService.getLastCommit(pathAt)).thenReturn(Optional.of("commit"));
+        prepareMocksForGetExistingProjectComponents(pathAt, projectComponents);
+
+        when(projectComponentsService.updateExistingComponent(
+                any(), any(ProjectComponentRequest.class)
+        )).thenReturn(ProjectComponentsMother.of());
+
+        prepareMocksForSave();
+
+        // when
+        provisionerActionsService.updateComponentProvisioningStatus(
+                "projectKey",
+                request(componentId, "catalogItemId", Status.CREATED, "url", null, "created", "updated", List.of())
+        );
+
+        // then
+        verify(projectComponentsService).updateExistingComponent(
+                any(),
+                argThat(req -> {
+                    try {
+                        return Long.parseLong(req.getUpdatedAt()) > 0;
+                    } catch (Exception e) {
+                        return false;
+                    }
+                })
+        );
+    }
+
+    @Test
+    void givenExistingComponent_whenPartialUpdate_thenUpdatedAtIsModified() throws Exception {
+        // given
+        var componentId = "componentId";
+
+        var component = new ProjectComponent();
+        component.setUpdatedAt("old");
+
+        var map = new HashMap<String, ProjectComponent>();
+        map.put(componentId, component);
+
+        var projectComponents = new ProjectComponents();
+        projectComponents.setComponents(map);
+
+        var pathAt = BitbucketPathAtMother.of();
+
+        prepareMocksForGetBitbucketPathAt(pathAt);
+        when(bitbucketService.getLastCommit(pathAt)).thenReturn(Optional.of("commit"));
+
+        prepareMocksForGetExistingProjectComponents(pathAt, projectComponents);
+
+        when(projectComponentsService.updatePartiallyExistingComponent(
+                any(),
+                any(ProjectComponentRequest.class)
+        )).thenReturn(ProjectComponentsMother.of());
+
+        prepareMocksForSave();
+
+        // when
+        provisionerActionsService.updatePartiallyComponentProvisioningStatus(
+                "projectKey",
+                request(componentId, "catalogItemId", Status.FAILED, "url", "jobId", "created", "updated", List.of())
+        );
+
+        // then
+        assertThat(Long.parseLong(component.getUpdatedAt())).isGreaterThan(0);
+    }
+
+    private String prepareMocksForSave() throws JsonProcessingException {
         var serializedUpdatedProjectComponents = "{ serialized-updated-json: true }";
 
         when(objectMapper.writerWithDefaultPrettyPrinter()).thenReturn(objectWriter);
-        when(objectWriter.writeValueAsString(updatedProjectComponents)).thenReturn(serializedUpdatedProjectComponents);
+        when(objectWriter.writeValueAsString(any())).thenReturn(serializedUpdatedProjectComponents);
 
         return serializedUpdatedProjectComponents;
     }
